--- a/option.html
+++ b/option.html
@@ -183,7 +183,7 @@
         <h2>课号</h2>
         <input type="text" id="kehao" />
         
-        <h2>刷新延迟（建议时间1700-1800s）</h2>
+        <h2>刷新延迟（建议时间1700-1800ms）</h2>
         <input type="text" id="delayTime" />
         <br />
         <br />
